[gd_scene load_steps=16 format=4 uid="uid://dmf0uqbm0q3tv"]

[ext_resource type="Script" uid="uid://yqfpk2rabjnu" path="res://rooms/menu.gd" id="1_xe0oa"]
[ext_resource type="PackedScene" uid="uid://v0qlcyty6g8i" path="res://scenes/tilemap/tilemap.tscn" id="2_iqh05"]
[ext_resource type="Texture2D" uid="uid://cdnunui18bx10" path="res://assets/generic/pixel.png" id="2_slw2s"]
[ext_resource type="PackedScene" uid="uid://bidf0spt461wy" path="res://scenes/camera/camera.tscn" id="4_cpwjf"]
[ext_resource type="FontFile" uid="uid://cfylsgfwp1fy4" path="res://assets/fonts/GAMEPLAY-1987.ttf" id="5_e0ykq"]
[ext_resource type="FontFile" uid="uid://dtec4w8hxc3v4" path="res://assets/fonts/hefty-me.ttf" id="6_h707c"]
[ext_resource type="Texture2D" uid="uid://dwi2yudqmail1" path="res://assets/icons/play.png" id="7_dwdr0"]
[ext_resource type="Texture2D" uid="uid://b8nowkr1nt8ps" path="res://assets/icons/settings.png" id="7_goeul"]
[ext_resource type="Texture2D" uid="uid://dbk1w6rrp0sv3" path="res://assets/icons/quit.png" id="10_7u8qn"]
[ext_resource type="Texture2D" uid="uid://03t647ymdn6i" path="res://assets/icons/picker.png" id="10_mlpp8"]
[ext_resource type="Texture2D" uid="uid://cpjag6sp0qyhn" path="res://assets/icons/x_button.png" id="11_7u8qn"]
[ext_resource type="Texture2D" uid="uid://v3u8y2amcuwn" path="res://assets/icons/c_button.png" id="12_e6bxe"]
[ext_resource type="Script" uid="uid://dh0e5fyqxawu4" path="res://rooms/volume_option.gd" id="13_t31ay"]
[ext_resource type="Script" uid="uid://dux3u8w2pe07d" path="res://rooms/window_option.gd" id="14_knqm1"]
[ext_resource type="Script" uid="uid://4n43rmm6tajp" path="res://rooms/fullscreen_option.gd" id="15_wyuvf"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_xe0oa")
metadata/_edit_vertical_guides_ = [320.0, 160.0]
metadata/_edit_horizontal_guides_ = [240.0, 120.0, 480.0, 360.0]

[node name="Camera" parent="." node_paths=PackedStringArray("follow") instance=ExtResource("4_cpwjf")]
position = Vector2(160, 120)
base_offset = Vector2(160, 120)
follow = NodePath("../Menus/TitleMenu")
follow_speed = 12.0

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.266667, 0.266667, 0.266667, 1)
z_index = -10
position = Vector2(-320, 0)
scale = Vector2(640, 720)
texture = ExtResource("2_slw2s")
centered = false

[node name="Tilemap" parent="." instance=ExtResource("2_iqh05")]
position = Vector2(0, 240)

[node name="BackgroundParallax" parent="Tilemap" index="0"]
scroll_scale = Vector2(1, 1)

[node name="Background" parent="Tilemap/BackgroundParallax" index="0"]
tile_map_data = PackedByteArray("AAABAAEAAAABAAAAAAABAAIAAAABAAAAAAACAAMAAAABAAAAAAADAAMAAAABAAAAAAAFAAUAAAABAAAAAAAFAAYAAAACAAAAAAAGAAYAAAABAAAAAAAGAAUAAAABAAAAAAAGAAcAAAABAAAAAAAJAAcAAAACAAEAAAAIAAcAAAABAAAAAAAIAAYAAAABAAAAAAAHAAYAAAABAAAAAAAHAAcAAAABAAAAAAAJAAgAAAABAAAAAAAKAAcAAAABAAAAAAAKAAgAAAABAAAAAAALAAgAAAABAAAAAAALAAkAAAABAAAAAAALAAoAAAABAAAAAAAKAAoAAAABAAAAAAAKAAsAAAACAAMAAAAMAAkAAAABAAAAAAAMAAoAAAABAAEAAAANAAkAAAADAAIAAAANAAoAAAABAAAAAAAMAAsAAAABAAAAAAANAAsAAAABAAAAAAAMAAwAAAABAAAAAAANAAwAAAABAAAAAAANAA0AAAABAAAAAAAOAA0AAAABAAAAAAAPAA0AAAADAAIAAAAQAAEAAAACAAIAAAARAAEAAAABAAAAAAARAAIAAAABAAAAAAAQAAMAAAABAAAAAAAQAAIAAAABAAAAAAAPAAMAAAABAAAAAAAOAAQAAAABAAAAAAAOAAUAAAABAAAAAAANAAUAAAABAAAAAAANAAQAAAABAAAAAAAMAAQAAAABAAAAAAAMAAUAAAAMAAAAAAALAAQAAAABAAAAAAAKAAMAAAACAAIAAAAJAAQAAAACAAIAAAAHAAUAAAABAAAAAAAGAAgAAAABAAAAAAAFAAcAAAABAAAAAAAEAAgAAAABAAAAAAAFAAgAAAABAAAAAAAEAAcAAAABAAAAAAADAAgAAAACAAIAAAACAAkAAAACAAIAAAAJAAUAAAABAAAAAAAJAAYAAAABAAAAAAAKAAQAAAABAAAAAAAKAAUAAAABAAAAAAALAAUAAAANAAEAAAAIAAUAAAABAAAAAAACAAIAAAABAAAAAAABAAMAAAACAAMAAAACAAEAAAABAAAAAAADAAIAAAADAAIAAAADAAQAAAABAAAAAAAKAAkAAAABAAAAAAALAAsAAAABAAAAAAAMAA0AAAACAAMAAAAOAAwAAAADAAIAAAALAAMAAAADAAIAAAAOAAMAAAACAAIAAAAPAAQAAAABAAAAAAAPAAUAAAADAAMAAAAQAAQAAAADAAMAAAAPAAIAAAACAAIAAAARAAMAAAABAAAAAAASAAMAAAABAAAAAAASAAIAAAABAAAAAAANAAYAAAABAAAAAAAOAAYAAAADAAMAAAAFAAkAAAABAAAAAAAEAAkAAAABAAAAAAAEAAoAAAABAAAAAAADAAoAAAABAAAAAAADAAsAAAAMAAEAAAACAAsAAAABAAAAAAABAAsAAAACAAIAAAACAAoAAAABAAAAAAADAAkAAAABAAAAAAABAAwAAAABAAAAAAAKAAYAAAABAAAAAAAMAAYAAAABAAAAAAAHAAgAAAABAAAAAAAGAAkAAAADAAMAAAAFAAoAAAABAAAAAAAFAAsAAAADAAMAAAAEAAsAAAABAAAAAAAEAAwAAAABAAAAAAAEAA0AAAADAAMAAAADAAwAAAANAAAAAAADAA0AAAABAAAAAAACAAwAAAABAAAAAAACAA0AAAABAAAAAAABAA0AAAABAAAAAAALAAYAAAABAAAAAAALAAcAAAABAAAAAAAJAAkAAAACAAMAAAAMAAcAAAABAAAAAAAMAAgAAAABAAAAAAANAAcAAAADAAMAAAAIAAgAAAABAAAAAAAFAAwAAAAJAAcAAAAGAAoAAAAJAAcAAAAOAAcAAAAJAAcAAAAPAAYAAAAJAAcAAAAQAAUAAAAJAAcAAAARAAQAAAAJAAcAAAAOAAsAAAAJAAYAAAAPAAwAAAAJAAYAAAAQAA0AAAAJAAYAAAAMAAMAAAAJAAYAAAAEAAQAAAABAAAAAAADAAUAAAACAAMAAAAEAAUAAAABAAAAAAACAAQAAAACAAMAAAAEAAMAAAADAAIAAAAFAAQAAAADAAIAAAAEAAYAAAABAAAAAAAGAAQAAAAJAAYAAAAFAAMAAAAJAAYAAAAEAAIAAAAJAAYAAAADAAEAAAAJAAYAAAANAAMAAAAIAAYAAAADAAcAAAAIAAYAAAACAAgAAAAIAAYAAAABAAoAAAAIAAYAAAAHAAkAAAAJAAcAAAAIAAkAAAAIAAcAAAAJAAoAAAAIAAcAAAALAAwAAAAIAAcAAAANAAgAAAALAAcAAAAIAAQAAAAIAAYAAAAJAAMAAAAIAAYAAAAOAAIAAAAIAAYAAAAPAAEAAAAIAAYAAAADAAYAAAAIAAcAAAAAAAMAAAABAAAAAAAAAAIAAAABAAAAAAAAAAEAAAABAAAAAAAAAAAAAAABAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAAQAAAAAAABAAAAAAARAAAAAAABAAAAAAASAAAAAAABAAAAAAASAAEAAAABAAAAAAATAAEAAAABAAAAAAATAAIAAAABAAAAAAATAAMAAAABAAAAAAATAAAAAAABAAAAAAANAA4AAAABAAAAAAAOAA4AAAABAAAAAAAPAA4AAAABAAAAAAAQAA4AAAABAAAAAAAEAA4AAAABAAAAAAADAA4AAAABAAAAAAACAA4AAAABAAAAAAABAA4AAAABAAAAAAAAAA4AAAABAAAAAAAAAA0AAAABAAAAAAAAAAwAAAABAAAAAAAAAAsAAAABAAAAAAAAAP//AAABAAAAAAATAP//AAABAAAAAAAAAP7/AAALAAQAAAATAP7/AAALAAQAAAAAAPL/AAABAAAAAAAAAPP/AAABAAAAAAABAPP/AAABAAAAAAACAPP/AAABAAAAAAADAPP/AAABAAAAAAAEAPP/AAABAAAAAAAFAPP/AAABAAAAAAAFAPT/AAABAAAAAAAGAPT/AAABAAAAAAAHAPT/AAABAAAAAAAIAPT/AAABAAAAAAAJAPT/AAABAAAAAAAKAPT/AAABAAAAAAALAPT/AAABAAAAAAANAPT/AAABAAAAAAANAPP/AAABAAAAAAAOAPP/AAABAAAAAAAOAPT/AAABAAAAAAAPAPT/AAABAAAAAAAQAPT/AAABAAAAAAAQAPP/AAADAAYAAAARAPT/AAABAAAAAAASAPT/AAADAAYAAAASAPX/AAABAAAAAAATAPX/AAABAAAAAAATAPb/AAABAAAAAAAAAPT/AAABAAAAAAABAPT/AAABAAAAAAABAPX/AAACAAcAAAACAPT/AAABAAAAAAADAPT/AAABAAAAAAADAPX/AAABAAAAAAAEAPX/AAABAAAAAAAFAPX/AAABAAAAAAAGAPX/AAABAAAAAAAHAPX/AAABAAAAAAAIAPX/AAABAAAAAAAJAPX/AAABAAAAAAAKAPX/AAABAAAAAAAKAPb/AAABAAAAAAALAPb/AAABAAAAAAALAPX/AAABAAAAAAANAPX/AAABAAAAAAANAPb/AAABAAAAAAAOAPb/AAABAAAAAAAPAPb/AAABAAAAAAAQAPb/AAABAAAAAAARAPb/AAABAAAAAAARAPf/AAACAAcAAAASAPf/AAABAAAAAAATAPf/AAABAAAAAAASAPb/AAABAAAAAAARAPX/AAABAAAAAAAQAPX/AAABAAAAAAAPAPX/AAABAAAAAAAOAPX/AAABAAAAAAAJAPb/AAABAAAAAAAIAPb/AAABAAAAAAAHAPb/AAABAAAAAAAGAPb/AAABAAAAAAACAPX/AAABAAAAAAAFAPb/AAACAAcAAAAGAPP/AAABAAAAAAAHAPP/AAADAAYAAAAEAPT/AAABAAAAAAAPAPP/AAABAAAAAAAMAPP/AAACAAYAAAAOAPf/AAADAAcAAAANAPf/AAABAAAAAAALAPf/AAACAAcAAAABAPL/AAABAAAAAAACAPL/AAADAAYAAAABAPH/AAABAAAAAAAAAPH/AAABAAAAAAAMAPT/AAABAAAAAAAMAPX/AAABAAAAAAAMAPb/AAABAAAAAAAMAPf/AAABAAAAAAAPAPf/AAAJAAcAAAAKAPf/AAAIAAcAAAAQAPf/AAAIAAcAAAAEAPb/AAAIAAcAAAAAAPX/AAAIAAcAAAACAPH/AAAJAAYAAAADAPL/AAAJAAYAAAAIAPP/AAAJAAYAAAALAPP/AAAIAAYAAAARAPP/AAAJAAYAAAATAPT/AAAJAAYAAAABAPj/AAALAAQAAAABAPn/AAABAAAAAAACAPj/AAALAAQAAAACAPn/AAABAAAAAAADAPj/AAALAAQAAAADAPn/AAABAAAAAAAEAPj/AAALAAQAAAAEAPn/AAABAAAAAAAFAPj/AAALAAQAAAAFAPn/AAABAAAAAAAGAPj/AAALAAQAAAAGAPn/AAABAAAAAAAHAPj/AAALAAQAAAAHAPn/AAABAAAAAAAIAPj/AAALAAQAAAAIAPn/AAABAAAAAAAJAPj/AAALAAQAAAAJAPn/AAABAAAAAAAKAPj/AAALAAQAAAAKAPn/AAABAAAAAAALAPj/AAALAAQAAAALAPn/AAABAAAAAAAMAPj/AAALAAQAAAAMAPn/AAABAAAAAAANAPj/AAALAAQAAAANAPn/AAABAAAAAAAOAPj/AAALAAQAAAAOAPn/AAABAAAAAAAPAPj/AAALAAQAAAAPAPn/AAABAAAAAAAQAPj/AAALAAQAAAAQAPn/AAABAAAAAAARAPj/AAALAAQAAAARAPn/AAABAAAAAAASAPj/AAALAAQAAAASAPn/AAABAAAAAADx//H/AAABAAAAAADw//L/AAABAAAAAADv//P/AAABAAAAAADu//T/AAABAAAAAADt//X/AAABAAAAAADs//b/AAABAAAAAADs//f/AAABAAAAAADt//b/AAABAAAAAADu//X/AAABAAAAAADv//T/AAABAAAAAADw//P/AAABAAAAAADx//L/AAABAAAAAADy//H/AAABAAAAAADt//f/AAAJAAEAAADu//b/AAAJAAEAAADv//X/AAABAAAAAADw//T/AAAJAAEAAADx//P/AAAJAAEAAADy//L/AAAJAAEAAADv//L/AAAIAAAAAADu//P/AAAIAAAAAADt//T/AAAIAAAAAADs//X/AAAIAAAAAAD3//L/AAAJAAAAAAD4//P/AAALAAAAAAD5//T/AAABAAAAAAD6//X/AAALAAEAAAD7//b/AAAJAAAAAAD8//f/AAAJAAAAAAD9//j/AAAJAAAAAAD+//n/AAABAAAAAAD///r/AAALAAAAAAD2//L/AAABAAAAAAD3//P/AAABAAAAAAD4//T/AAABAAAAAAD5//X/AAABAAAAAAD6//b/AAABAAAAAAD7//f/AAABAAAAAAD8//j/AAABAAAAAAD9//n/AAABAAAAAAD+//r/AAABAAAAAAD///v/AAABAAAAAAD1//L/AAABAAAAAAD2//P/AAABAAAAAAD3//T/AAABAAAAAAD4//X/AAABAAEAAAD5//b/AAABAAAAAAD6//f/AAABAAAAAAD7//j/AAABAAAAAAD8//n/AAABAAAAAAD9//r/AAABAAAAAAD+//v/AAABAAAAAAD///z/AAABAAAAAAD0//L/AAAIAAEAAAD1//P/AAAIAAEAAAD2//T/AAAIAAEAAAD3//X/AAAKAAAAAAD4//b/AAABAAAAAAD5//f/AAAIAAEAAAD6//j/AAAIAAEAAAD7//n/AAAKAAAAAAD8//r/AAABAAEAAAD9//v/AAAKAAEAAAD+//z/AAAIAAEAAAD///3/AAAIAAEAAAD8//L/AAABAAAAAAD7//P/AAABAAAAAAD6//T/AAABAAAAAAD3//f/AAABAAAAAAD2//j/AAABAAAAAAD1//n/AAABAAAAAAD0//r/AAABAAAAAADz//v/AAABAAAAAADy//z/AAABAAAAAADx//3/AAABAAAAAADw//7/AAABAAAAAADv////AAABAAAAAAD9//L/AAAJAAEAAAD8//P/AAABAAAAAAD7//T/AAAJAAEAAAD4//f/AAAJAAEAAAD3//j/AAAJAAEAAAD2//n/AAALAAEAAAD1//r/AAABAAEAAAD0//v/AAAKAAEAAADz//z/AAAJAAEAAADy//3/AAAJAAEAAADx//7/AAAJAAEAAADw////AAAJAAEAAAD7//L/AAABAAAAAAD6//P/AAABAAAAAAD3//b/AAABAAAAAAD2//f/AAABAAAAAAD1//j/AAABAAAAAAD0//n/AAABAAAAAADz//r/AAABAAAAAADy//v/AAABAAAAAADx//z/AAABAAAAAADw//3/AAABAAAAAADv//7/AAABAAAAAAD6//L/AAAIAAAAAAD5//P/AAALAAAAAAD2//b/AAAIAAAAAAD1//f/AAAIAAAAAAD0//j/AAAIAAAAAADz//n/AAAIAAAAAADy//r/AAALAAAAAADx//v/AAABAAEAAADw//z/AAAKAAAAAADv//3/AAAIAAAAAADu//7/AAAIAAAAAADs//r/AAABAAAAAADt//r/AAABAAAAAADu//r/AAABAAAAAADv//r/AAABAAAAAADw//r/AAABAAAAAADx//r/AAABAAAAAAD2//r/AAABAAAAAAD3//r/AAABAAAAAAD4//r/AAABAAAAAAD5//r/AAABAAAAAAD6//r/AAABAAAAAAD7//r/AAABAAAAAAD8//v/AAABAAAAAAD7//v/AAABAAAAAAD6//v/AAABAAAAAAD5//v/AAABAAAAAAD4//v/AAABAAAAAAD3//v/AAABAAAAAAD2//v/AAABAAAAAAD1//v/AAABAAAAAADw//v/AAABAAAAAADv//v/AAABAAAAAADu//v/AAABAAAAAADt//v/AAABAAAAAADs//v/AAABAAAAAAD9//X/AAAIAAIAAAD9//b/AAAIAAMAAAD+//X/AAAJAAIAAAD+//b/AAAJAAMAAAD4//j/AAAIAAIAAAD4//n/AAAIAAMAAAD5//j/AAAJAAIAAAD5//n/AAAJAAMAAADv//f/AAAIAAIAAADv//j/AAAIAAMAAADw//f/AAAJAAIAAADw//j/AAAJAAMAAAD0//3/AAAIAAIAAAD0//7/AAAIAAMAAAD1//3/AAAJAAIAAAD1//7/AAAJAAMAAAD3//z/AAAIAAMAAAD4//z/AAAJAAMAAAD4//7/AAAIAAIAAAD4////AAAIAAMAAAD5//7/AAAJAAIAAAD5////AAAJAAMAAAD7//z/AAAIAAIAAAD7//3/AAAIAAMAAAD8//z/AAAJAAIAAAD8//3/AAAJAAMAAADz//P/AAAIAAIAAADz//T/AAAIAAMAAAD0//P/AAAJAAIAAAD0//T/AAAJAAMAAADy//b/AAAIAAIAAADy//f/AAAIAAMAAADz//b/AAAJAAIAAADz//f/AAAJAAMAAADu//n/AAAIAAIAAADv//n/AAAJAAIAAAA=")

[node name="Foreground" parent="Tilemap/ForegroundParallax" index="0"]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAgAAAABAAAAAAAAAAkAAAABAAAAAAAAAAoAAAABAAAAAAAAAAsAAAABAAAAAAAAAAwAAAABAAAAAAAAAA0AAAABAAAAAAAAAA4AAAABAAAAAAAAAAcAAAABAAAAAAAAAAYAAAABAAAAAAAAAAUAAAABAAAAAAAAAAQAAAABAAAAAAABAA4AAAABAAAAAAACAA4AAAABAAAAAAADAA4AAAABAAAAAAAEAA4AAAABAAAAAAAFAA4AAAABAAAAAAAGAA4AAAABAAAAAAAHAA4AAAABAAAAAAAIAA4AAAABAAAAAAAJAA4AAAABAAAAAAAKAA4AAAABAAAAAAALAA4AAAABAAAAAAAMAA4AAAABAAAAAAANAA4AAAABAAAAAAAOAA4AAAABAAAAAAAPAA4AAAABAAAAAAAQAA4AAAABAAAAAAARAA4AAAABAAAAAAASAA4AAAABAAAAAAATAA4AAAABAAAAAAATAAAAAAABAAAAAAATAAEAAAABAAAAAAATAAIAAAABAAAAAAATAAMAAAABAAAAAAATAAQAAAABAAAAAAATAAUAAAABAAAAAAATAAYAAAABAAAAAAATAAcAAAABAAAAAAATAAgAAAABAAAAAAATAAkAAAABAAAAAAATAAoAAAABAAAAAAATAAsAAAABAAAAAAATAAwAAAABAAAAAAATAA0AAAABAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAABAAAAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAANAAAAAAABAAAAAAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAABAAAAAAARAAAAAAABAAAAAAASAAAAAAABAAAAAAABAAEAAAABAAEAAAASAAEAAAAAAAEAAAABAA0AAAAAAAEAAAASAA0AAAABAAEAAAARAA0AAAACAAYAAAASAAwAAAACAAYAAAACAA0AAAADAAYAAAABAAwAAAADAAYAAAABAAIAAAADAAcAAAACAAEAAAADAAcAAAARAAEAAAACAAcAAAASAAIAAAACAAcAAAARAAwAAAAIAAQAAAASAAsAAAAIAAYAAAAQAA0AAAAIAAYAAAADAA0AAAAJAAYAAAABAAsAAAAJAAYAAAABAAMAAAAJAAcAAAADAAEAAAAJAAcAAAAQAAEAAAAIAAcAAAASAAMAAAAIAAcAAAACAAwAAAAJAAQAAAACAAIAAAAJAAUAAAARAAIAAAAIAAUAAAAJAAEAAAAEAAEAAAAKAAEAAAAEAAEAAAAJAA0AAAAFAAAAAAAKAA0AAAAFAAAAAAALAA0AAAAJAAQAAAAIAA0AAAAIAAQAAAALAAEAAAAJAAUAAAAIAAEAAAAIAAUAAAABAAcAAAAFAAEAAAASAAcAAAAEAAAAAAASAAgAAAAIAAUAAAASAAYAAAAIAAQAAAABAAgAAAAJAAUAAAABAAYAAAAJAAQAAAAAAP//AAABAAAAAAATAP//AAABAAAAAAAAAPH/AAABAAAAAAABAPH/AAABAAAAAAACAPH/AAABAAAAAAADAPH/AAABAAAAAAAEAPH/AAABAAAAAAAFAPH/AAABAAAAAAAGAPH/AAABAAAAAAAHAPH/AAABAAAAAAAIAPH/AAABAAAAAAAJAPH/AAANAAEAAAAKAPH/AAAMAAAAAAALAPH/AAABAAAAAAAMAPH/AAABAAAAAAANAPH/AAABAAAAAAAOAPH/AAABAAAAAAAPAPH/AAABAAAAAAAQAPH/AAABAAAAAAARAPH/AAABAAAAAAASAPH/AAABAAAAAAATAPH/AAABAAAAAAATAPr/AAABAAAAAAATAPn/AAABAAAAAAATAPj/AAABAAAAAAATAPf/AAABAAAAAAATAPb/AAABAAAAAAATAPX/AAABAAAAAAATAPT/AAABAAAAAAATAPP/AAABAAAAAAATAPL/AAABAAAAAAATAPv/AAABAAAAAAAAAPL/AAABAAAAAAAAAPP/AAABAAAAAAAAAPT/AAABAAAAAAAAAPX/AAABAAAAAAAAAPb/AAABAAAAAAAAAPf/AAABAAAAAAAAAPj/AAABAAAAAAAAAPn/AAABAAAAAAAAAPr/AAABAAAAAAAAAPv/AAABAAAAAAABAPL/AAAHAAEAAAASAPL/AAAGAAEAAAAAAPz/AAABAAAAAAATAPz/AAABAAAAAAAAAP3/AAABAAAAAAAAAP7/AAABAAAAAAATAP3/AAABAAAAAAATAP7/AAABAAAAAAACAPL/AAAIAAcAAAADAPL/AAACAAcAAAAEAPL/AAABAAAAAAAFAPL/AAABAAAAAAAGAPL/AAABAAAAAAAHAPL/AAABAAAAAAAIAPL/AAABAAAAAAAJAPL/AAABAAAAAAAKAPL/AAABAAAAAAALAPL/AAABAAAAAAAMAPL/AAABAAAAAAANAPL/AAABAAAAAAAOAPL/AAABAAAAAAAPAPL/AAABAAAAAAAQAPL/AAADAAcAAAARAPL/AAAJAAcAAAABAPn/AAANAAIAAAABAPr/AAABAAAAAAABAPv/AAABAAAAAAABAPz/AAABAAAAAAACAPn/AAAMAAIAAAACAPr/AAABAAAAAAACAPv/AAABAAAAAAACAPz/AAABAAAAAAADAPn/AAANAAIAAAADAPr/AAABAAAAAAADAPv/AAABAAAAAAADAPz/AAABAAAAAAAEAPn/AAAMAAIAAAAEAPr/AAABAAAAAAAEAPv/AAABAAAAAAAEAPz/AAABAAAAAAAFAPn/AAANAAIAAAAFAPr/AAABAAAAAAAFAPv/AAABAAAAAAAFAPz/AAABAAAAAAAGAPn/AAAMAAIAAAAGAPr/AAABAAAAAAAGAPv/AAABAAAAAAAGAPz/AAABAAAAAAAHAPn/AAANAAIAAAAHAPr/AAABAAAAAAAHAPv/AAABAAAAAAAHAPz/AAABAAAAAAAIAPn/AAAMAAIAAAAIAPr/AAABAAAAAAAIAPv/AAABAAAAAAAIAPz/AAABAAAAAAAJAPn/AAANAAIAAAAJAPr/AAABAAAAAAAJAPv/AAABAAAAAAAJAPz/AAABAAAAAAAKAPn/AAAMAAIAAAAKAPr/AAABAAAAAAAKAPv/AAABAAAAAAAKAPz/AAABAAAAAAALAPn/AAANAAIAAAALAPr/AAABAAAAAAALAPv/AAABAAAAAAALAPz/AAABAAAAAAAMAPn/AAAMAAIAAAAMAPr/AAABAAAAAAAMAPv/AAABAAAAAAAMAPz/AAABAAAAAAANAPn/AAANAAIAAAANAPr/AAABAAAAAAANAPv/AAABAAAAAAANAPz/AAABAAAAAAAOAPn/AAAMAAIAAAAOAPr/AAABAAAAAAAOAPv/AAABAAAAAAAOAPz/AAABAAAAAAAPAPn/AAANAAIAAAAPAPr/AAABAAAAAAAPAPv/AAABAAAAAAAPAPz/AAABAAAAAAAQAPn/AAAMAAIAAAAQAPr/AAABAAAAAAAQAPv/AAABAAAAAAAQAPz/AAABAAAAAAARAPn/AAANAAIAAAARAPr/AAABAAAAAAARAPv/AAABAAAAAAARAPz/AAABAAAAAAASAPn/AAAMAAIAAAASAPr/AAABAAAAAAASAPv/AAABAAAAAAASAPz/AAABAAAAAAABAP3/AAABAAAAAAACAP3/AAABAAAAAAADAP3/AAABAAAAAAAEAP3/AAABAAAAAAAFAP3/AAABAAAAAAAGAP3/AAABAAAAAAAHAP3/AAABAAAAAAAIAP3/AAABAAAAAAAJAP3/AAABAAAAAAAKAP3/AAABAAAAAAALAP3/AAABAAAAAAAMAP3/AAABAAAAAAANAP3/AAABAAAAAAAOAP3/AAABAAAAAAAPAP3/AAABAAAAAAAQAP3/AAABAAAAAAARAP3/AAABAAAAAAASAP3/AAABAAAAAAABAP7/AAABAAAAAAABAP//AAABAAAAAAACAP7/AAABAAAAAAACAP//AAABAAAAAAADAP7/AAABAAAAAAADAP//AAABAAAAAAAEAP7/AAABAAAAAAAEAP//AAABAAAAAAAFAP7/AAABAAAAAAAFAP//AAABAAAAAAAGAP7/AAABAAAAAAAGAP//AAABAAAAAAAHAP7/AAABAAAAAAAHAP//AAABAAAAAAAIAP7/AAABAAAAAAAIAP//AAABAAAAAAAJAP7/AAABAAAAAAAJAP//AAABAAAAAAAKAP7/AAABAAAAAAAKAP//AAABAAAAAAALAP7/AAABAAAAAAALAP//AAABAAAAAAAMAP7/AAABAAAAAAAMAP//AAABAAAAAAANAP7/AAABAAAAAAANAP//AAABAAAAAAAOAP7/AAABAAAAAAAOAP//AAABAAAAAAAPAP7/AAABAAAAAAAPAP//AAABAAAAAAAQAP7/AAABAAAAAAAQAP//AAABAAAAAAARAP7/AAABAAAAAAARAP//AAABAAAAAAASAP7/AAABAAAAAAASAP//AAABAAAAAAAZAPX/AAABAAAAAAD/////AAABAAAAAAD///7/AAABAAAAAAD///3/AAACAAYAAAD///P/AAACAAcAAAD///L/AAABAAAAAAD///H/AAABAAAAAAAUAPH/AAABAAAAAAAUAPL/AAABAAAAAAAUAPz/AAABAAAAAAAUAP3/AAABAAAAAAAUAP7/AAABAAAAAAAUAP//AAABAAAAAAAUAPP/AAABAAAAAAAUAPT/AAABAAAAAAAUAPX/AAABAAAAAAAUAPb/AAABAAAAAAAUAPf/AAABAAAAAAAUAPj/AAABAAAAAAAUAPn/AAABAAAAAAAUAPr/AAABAAAAAAAUAPv/AAABAAAAAAD+//H/AAABAAAAAAD9//H/AAABAAAAAADv//H/AAABAAAAAADu//H/AAABAAAAAADt//H/AAABAAAAAADs//H/AAABAAAAAADs//L/AAABAAAAAADs//P/AAADAAcAAADs//3/AAADAAYAAADs//7/AAABAAAAAADs////AAABAAAAAADt////AAABAAAAAADu////AAABAAAAAADv////AAABAAAAAAD8////AAABAAAAAAD9////AAABAAAAAAD+////AAABAAAAAADt//L/AAAHAAEAAAD+//L/AAAGAAEAAAD+//7/AAAGAAAAAADt//7/AAAHAAAAAAD8//H/AAABAAAAAAD///T/AAAEAAAAAAD///X/AAAEAAAAAAD///b/AAAEAAAAAAD///f/AAAEAAAAAAD///j/AAAEAAAAAAD///n/AAAEAAAAAAD///r/AAAEAAAAAAD///v/AAAEAAAAAAD///z/AAAEAAAAAADs//T/AAAFAAEAAADs//X/AAAFAAEAAADs//b/AAAFAAEAAADs//f/AAAFAAEAAADs//j/AAAFAAEAAADr//j/AAAFAAEAAADr//r/AAAFAAEAAADs//r/AAAFAAEAAADs//v/AAAFAAEAAADs//z/AAAFAAEAAADs//n/AAAFAAEAAADx////AAABAAAAAADy////AAABAAAAAADz////AAABAAAAAAD0////AAABAAAAAAD1////AAABAAAAAAD2////AAABAAAAAAD3////AAABAAAAAAD4////AAABAAAAAAD5////AAABAAAAAAD6////AAABAAAAAADx//H/AAABAAAAAADy//H/AAABAAAAAADz//H/AAABAAAAAAD0//H/AAABAAAAAAD1//H/AAABAAAAAAD2//H/AAABAAAAAAD3//H/AAABAAAAAAD4//H/AAABAAAAAAD5//H/AAABAAAAAAD6//H/AAABAAAAAADw////AAABAAAAAAD7////AAABAAAAAAD7//H/AAABAAAAAADw//H/AAABAAAAAADw//L/AAAIAAEAAADx//L/AAAJAAEAAAD2//L/AAAIAAMAAAD3//L/AAAJAAMAAAD4//7/AAAIAAAAAAD5//7/AAAJAAAAAADw//7/AAAIAAIAAADx//7/AAAJAAIAAADs/wAAAAABAAAAAADt/wAAAAABAAAAAADu/wAAAAABAAAAAADv/wAAAAABAAAAAADw/wAAAAABAAAAAADx/wAAAAABAAAAAADy/wAAAAABAAAAAADz/wAAAAABAAAAAAD0/wAAAAABAAAAAAD1/wAAAAABAAAAAAD2/wAAAAABAAAAAAD3/wAAAAABAAAAAAD4/wAAAAABAAAAAAD5/wAAAAABAAAAAAD6/wAAAAABAAAAAAD7/wAAAAABAAAAAAD8/wAAAAABAAAAAAD9/wAAAAABAAAAAAD+/wAAAAABAAAAAAD//wAAAAABAAAAAAD//wEAAAABAAAAAAD//wIAAAABAAAAAAD//wMAAAABAAAAAAD//wQAAAABAAAAAAD//wUAAAABAAAAAAD//wYAAAABAAAAAAD//wcAAAABAAAAAAD//wgAAAABAAAAAAD//wkAAAABAAAAAAD//woAAAABAAAAAAD//wsAAAABAAAAAAD//wwAAAABAAAAAAD//w0AAAABAAAAAAD//w4AAAABAAAAAAD//w8AAAABAAAAAAAAAA8AAAABAAAAAAABAA8AAAABAAAAAAACAA8AAAABAAAAAAADAA8AAAABAAAAAAAEAA8AAAABAAAAAAAFAA8AAAABAAAAAAAGAA8AAAABAAAAAAAHAA8AAAABAAAAAAAIAA8AAAABAAAAAAAJAA8AAAABAAAAAAAKAA8AAAABAAAAAAALAA8AAAABAAAAAAAMAA8AAAABAAAAAAANAA8AAAABAAAAAAAOAA8AAAABAAAAAAAPAA8AAAABAAAAAAAQAA8AAAABAAAAAAARAA8AAAABAAAAAAASAA8AAAABAAAAAAATAA8AAAABAAAAAAAUAA8AAAABAAAAAAA=")

[node name="Menus" type="Node" parent="."]

[node name="TitleMenu" type="Node2D" parent="Menus"]

[node name="TitleText" type="RichTextLabel" parent="Menus/TitleMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 29.0
offset_top = 53.0
offset_right = 291.0
offset_bottom = 102.0
grow_horizontal = 2
rotation = 0.0872665
pivot_offset = Vector2(131, 25)
theme_override_fonts/normal_font = ExtResource("5_e0ykq")
theme_override_fonts/italics_font = ExtResource("5_e0ykq")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[wave]JUMBOTRON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Picker" type="Sprite2D" parent="Menus/TitleMenu"]
z_index = 5
position = Vector2(160, 136)
texture = ExtResource("10_mlpp8")

[node name="Options" type="Node2D" parent="Menus/TitleMenu"]
position = Vector2(160, 209)

[node name="SettingsOption" type="Node2D" parent="Menus/TitleMenu/Options"]
z_index = 5
position = Vector2(-105, -6)

[node name="SettingsText" type="RichTextLabel" parent="Menus/TitleMenu/Options/SettingsOption"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_right = 34.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("6_h707c")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave]SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsIcon" type="Sprite2D" parent="Menus/TitleMenu/Options/SettingsOption"]
position = Vector2(0, -18)
texture = ExtResource("7_goeul")

[node name="PlayOption" type="Node2D" parent="Menus/TitleMenu/Options"]
z_index = 5

[node name="PlayText" type="RichTextLabel" parent="Menus/TitleMenu/Options/PlayOption"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_right = 36.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("6_h707c")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave]PLAY BALL!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayIcon" type="Sprite2D" parent="Menus/TitleMenu/Options/PlayOption"]
position = Vector2(0, -28)
texture = ExtResource("7_dwdr0")

[node name="QuitOption" type="Node2D" parent="Menus/TitleMenu/Options"]
z_index = 5
position = Vector2(105, -6)

[node name="QuitText" type="RichTextLabel" parent="Menus/TitleMenu/Options/QuitOption"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_right = 25.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("6_h707c")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave]EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitIcon" type="Sprite2D" parent="Menus/TitleMenu/Options/QuitOption"]
position = Vector2(0, -18)
texture = ExtResource("10_7u8qn")

[node name="BackIndicator" type="Node2D" parent="Menus/TitleMenu"]
z_index = 5
position = Vector2(80, 20)

[node name="Label" type="RichTextLabel" parent="Menus/TitleMenu/BackIndicator"]
offset_left = 6.0
offset_top = -12.0
offset_right = 49.0
offset_bottom = 12.0
theme_override_fonts/normal_font = ExtResource("6_h707c")
bbcode_enabled = true
text = "back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButtonIcon" type="Sprite2D" parent="Menus/TitleMenu/BackIndicator"]
texture = ExtResource("11_7u8qn")

[node name="SelectIndicator" type="Node2D" parent="Menus/TitleMenu"]
z_index = 5
position = Vector2(201, 20)

[node name="Label" type="RichTextLabel" parent="Menus/TitleMenu/SelectIndicator"]
offset_left = 6.0
offset_top = -12.0
offset_right = 54.0
offset_bottom = 12.0
theme_override_fonts/normal_font = ExtResource("6_h707c")
bbcode_enabled = true
text = "select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectIcon" type="Sprite2D" parent="Menus/TitleMenu/SelectIndicator"]
texture = ExtResource("12_e6bxe")

[node name="SettingsMenu" type="Node2D" parent="Menus"]
position = Vector2(-320, 0)

[node name="Picker" type="Sprite2D" parent="Menus/SettingsMenu"]
self_modulate = Color(0.333333, 0.333333, 0.333333, 1)
position = Vector2(0, 78)
scale = Vector2(320, 16)
texture = ExtResource("2_slw2s")

[node name="Options" type="Node2D" parent="Menus/SettingsMenu"]
position = Vector2(0, 78)

[node name="VolumeOption" type="Node2D" parent="Menus/SettingsMenu/Options"]
position = Vector2(-1, 0)
script = ExtResource("13_t31ay")

[node name="Label" type="RichTextLabel" parent="Menus/SettingsMenu/Options/VolumeOption"]
z_index = 5
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 80.0
offset_right = 240.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("6_h707c")
bbcode_enabled = true
text = "VOLUME 00000---"
horizontal_alignment = 3
vertical_alignment = 1

[node name="WindowOption" type="Node2D" parent="Menus/SettingsMenu/Options"]
position = Vector2(0, 16)
script = ExtResource("14_knqm1")
value_max = 5
value_min = 1
initial_value = 3

[node name="Label" type="RichTextLabel" parent="Menus/SettingsMenu/Options/WindowOption"]
z_index = 5
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 80.0
offset_right = 240.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("6_h707c")
bbcode_enabled = true
text = "WINDOW 000-"
horizontal_alignment = 3
vertical_alignment = 1

[node name="FullscreenOption" type="Node2D" parent="Menus/SettingsMenu/Options"]
position = Vector2(0, 32)
script = ExtResource("15_wyuvf")
value_max = 2
initial_value = 0
bool_value = true

[node name="Label" type="RichTextLabel" parent="Menus/SettingsMenu/Options/FullscreenOption"]
z_index = 5
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 80.0
offset_right = 240.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("6_h707c")
bbcode_enabled = true
text = "FULLSCREEN nah"
horizontal_alignment = 3
vertical_alignment = 1

[node name="TrashOption" type="Node2D" parent="Menus/SettingsMenu/Options"]
position = Vector2(0, 73)

[node name="Label" type="RichTextLabel" parent="Menus/SettingsMenu/Options/TrashOption"]
z_index = 5
offset_right = 320.0
offset_bottom = 16.0
theme_override_fonts/normal_font = ExtResource("6_h707c")
bbcode_enabled = true
text = "CLEAR DATA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelSelectMenu" type="Node2D" parent="Menus"]
position = Vector2(0, 240)

[node name="Planets" type="Node2D" parent="Menus/LevelSelectMenu"]

[editable path="Tilemap"]
